# AppDietas

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 07c6c65189d7_add_audit_fields.py
db/: init.sql
docs/: README.md
docs/versions/SRS/: SRS_V1.md
src/: crud.py  database.py  exceptions.py  main.py  models.py  schemas.py  welcome.html
src/routers/: categories.py  ingredients.py  menus.py  recipe_ingredients.py  recipes.py  users.py
